--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,7 +1,28 @@
 html,
 body{
   font-size: 16px;
-  font-family: helvetica, sans-serif;
+  font-family: 'Hind', sans-serif;
+}
+
+@font-face {
+  font-family: 'Hind';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Hind Regular'), local('Hind-Regular'), url(https://fonts.gstatic.com/s/hind/v8/5aU69_a8oxmIdGl4BA.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+  font-family: 'Hind';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Hind Bold'), local('Hind-Bold'), url(https://fonts.gstatic.com/s/hind/v8/5aU19_a8oxmIfNJdERySjQ.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+h2 {
+  font-size: 3.8rem;
+  font-weight: bold;
 }
 
 /*  Header Section  */
@@ -55,32 +76,32 @@ ul .space {
 .banner {
   display: flex;
   background-color: lightgray;
-  padding: 2rem 1.5rem;
+  padding: 3.5rem 3rem;
 }
 
 .image-banner {
   width: 60%;
-  height: auto;
+}
+
+img {
+  width: 100%;
 }
 
 .banner-content {
-  display flex;
-  flex-direction column;
-  align-items center;
-  width: 31.4rem;
-  padding-left: 1.5rem;
-  line-height: 1.3;
+  width: 34.5rem;
+  padding-left: 5rem;
+  line-height: 1.25;
+  margin: auto 0;
 }
 
 h1 {
-  font-size: 3.8rem;
+  font-size: 4.5rem;
   font-weight: bold;
   margin-bottom: 3rem;
 }
 
 .banner h3 {
   font-size: 2.3rem;
-  font-weight: bold;
 }
 
 .button {
@@ -101,32 +122,47 @@ h1 {
 
 .main-info {
   width: 60%;
-  padding: 2rem 1.5rem;
-
+  padding: 3.5rem 3rem;
 }
 
-h2 {
-  font-size: 3rem;
-  font-weight: bold;
+.main-info img {
+  width: 100%;
+}
+
+.main-info h2 {
+  margin-top: 3rem;
+  margin-bottom: 2.5rem;
 }
 
 p {
-  font-size: 1.86rem;
+  font-size: 1.92rem;
+  line-height: 1.4;
+}
+
+.emanuel {
+  font-size: 1.4rem;
+  margin-top: 3rem;
 }
 
 .about {
   display: flex;
+  padding: 2rem;
 }
 
 .about-info {
   border-left: solid 1px lightgray;
-  padding-top: 1rem;
+  padding-top: 1.5rem;
+  width: 40%;
 }
 
-.image-about {
+.about-img {
   width: 35%;
-  height: auto;
-  padding: 1rem;
+}
+
+.about-content {
+  width: 60%;
+  padding-left: 2rem;
+  margin: auto 0;
 }
 
 .orientation {
@@ -144,12 +180,18 @@ p {
 }
 
 .about h3 {
-  font-size: 2.3rem;
+  font-size: 2.5rem;
   font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.about p {
+  font-size: 1.6rem;
+  margin-bottom: 1rem;
 }
 
 .about a {
-  font-size: 1.86rem;
+  font-size: 1.6rem;
   text-decoration: none;
   color: cornflowerblue;
 }
@@ -160,13 +202,14 @@ p {
   background-color: gainsboro;
 }
 
-h2 {
+.learning h2 {
   padding-top: 2rem;
   text-align: center;
 }
 
 .courses {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   padding: 2rem 4.5rem;
 }
@@ -175,6 +218,15 @@ h2 {
   max-width: 33.25rem;
   margin: 1rem;
   background-color: white;
+}
+
+.learning-content {
+  margin: 2rem;
+  height: 14.5rem;
+}
+
+.list {
+  margin: 1rem 0;
 }
 
 .course h3 {
@@ -196,6 +248,11 @@ h2 {
 .video {
   width: 60%;
   padding: 2rem 1.5rem;
+}
+
+.thesis h2 {
+  padding-top: 2rem;
+  text-align: center;
 }
 
 .thesis h3 {
