--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,76 +25,118 @@ h2 {
   font-weight: bold;
 }
 
+
 /*  Header Section  */
 
-header {
-  position fixed;
-}
 
-.container {
+header {
   display: flex;
   justify-content: space-between;
-  height: 4rem;
-  font-size: 2rem;
-  background-color: white;
+  height: 5rem;
+  font-size: 2.3rem;
+  background-color: #FFF;
+  position: fixed;
+  width: 100%;
 }
 
 .logo {
   display: flex;
   align-items: center;
   font-weight: bold;
-  margin-left: 1.5rem;
+  margin-left: 1.3rem;
 }
 
-header img {
-  height: 4.6rem;
+.big {
+  width: 4rem;
+  padding-top: .2rem;
 }
 
 .academy {
-  color: gray;
+  color: #808080;
   font-weight: normal;
 }
 
 nav a {
   text-decoration: none;
+  font-size: 2rem;
 }
 
 ul {
   display: flex;
   align-items: center;
-  margin-right: 1.5rem;
+  margin-right: 1.3rem;
 }
 
 ul .space {
-  background-color: darkturquoise;
+  background-color: #00ced1;
   width: 1rem;
-  height: 4rem;
+  height: 5rem;
 }
 
 @media only screen and (max-width: 996px) {
-  .logo h3, nav {
+  header h3 {
+    font-size: 1.8rem;
+  }
+
+  nav a {
+    font-size: 1.4rem;
+  }
+
+  .logo {
+    margin-left: 1rem;
+  }
+
+  ul {
+    margin-right: 1rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .mobile {
+    display: none;
+  }
+
+}
+
+@media only screen and (max-width: 768px) {
+  nav {
     display: none;
   }
 
   .logo {
-    display: flex;
-    justify-content: space-between;
     width: 100%;
     margin: 0;
   }
 
-  .logo img {
-    height: 2.5rem;
+  .big, .logo img {
+    width: 100%;
+    height: 3.5rem;
   }
 
 }
 
+@media only screen and (max-width: 471px) {
+  .logo h3, nav {
+    display: none;
+  }
+
+  .logo img {
+    height: 2.5rem;
+    padding: 0;
+  }
+
+}
+
+
 /*  Banner Section  */
+
 
 .banner {
   display: flex;
-  background-color: lightgray;
-  padding: 3.5rem 3rem;
+  background-color: #d3d3d3;
+  padding 3.5rem 3rem;
+  padding: 8.5rem 3rem 3.5rem 3rem;
+  position: static;
 }
 
 .image-banner {
@@ -123,7 +165,7 @@ h1 {
 }
 
 .button {
-  background-color: black;
+  background-color: #000;
   color: white;
   width: 100%;
   padding: 1rem;
@@ -134,7 +176,7 @@ h1 {
 @media only screen and (max-width: 996px) {
   .banner {
     display: block;
-    padding: 1rem;
+    padding: 6rem 1rem 1rem 1rem;
   }
 
   .image-banner {
@@ -143,16 +185,16 @@ h1 {
   }
 
   .banner-content {
-    width: 100%;
+    width: 80%;
     padding-left: 2rem;
-    line-height: 1.15;
-    margin: auto 0;
+    padding-bottom: 2rem;
   }
+
 }
 
 @media only screen and (max-width: 470px) {
   .banner {
-    padding: 0;
+    padding: 5rem 0 0 0;
   }
 
   .banner-content {
@@ -176,8 +218,12 @@ h1 {
     text-align: center;
     margin-top: 2rem;
   }
+
 }
+
+
 /*  Information Section  */
+
 
 .information {
   display: flex;
@@ -214,7 +260,7 @@ p {
 }
 
 .about-info {
-  border-left: solid 1px lightgray;
+  border-left: solid 1px #d3d3d3;
   padding-top: 1.5rem;
   width: 40%;
 }
@@ -230,17 +276,17 @@ p {
 }
 
 .orientation {
-  border-bottom: solid 1px lightgray;
+  border-bottom: solid 1px #d3d3d3;
   margin-bottom: 2px;
 }
 
 .campus {
-  border-top: solid 1px lightgray;
+  border-top: solid 1px #d3d3d3;
   margin-top: 2px;
 }
 
 .guest {
-  background-color: lightgray;
+  background-color: #d3d3d3;
 }
 
 .about h3 {
@@ -257,23 +303,26 @@ p {
 .about a {
   font-size: 1.6rem;
   text-decoration: none;
-  color: cornflowerblue;
+  color: #6495ed;
 }
 
-@media only screen and (min-width: 471px) {
-  .mobile {
+@media only screen and (min-width: 997px) {
+  .tablet {
     display: none;
   }
+
 }
 
-@media only screen and (max-width: 470px) {
-  .main-info,
+@media only screen and (max-width: 996px) {
   .bigger {
     display: none;
   }
 
+  .main-info {
+    padding: 0;
+  }
+
   .about-info {
-    width: 100%;
     padding: 0;
   }
 
@@ -289,7 +338,6 @@ p {
   .about-content {
     width: 100%;
     padding: .5rem;
-    height: auto;
   }
 
   .about p {
@@ -306,12 +354,29 @@ p {
     background-color: #F2F2F2;
   }
 
+  .main-info {
+    padding-left: 1rem;
+  }
+
 }
+
+@media only screen and (max-width: 768px) {
+  .main-info {
+    display: none;
+  }
+
+  .about-info {
+    width: 100%;
+  }
+
+}
+
 
 /*  Course  Section  */
 
+
 .learning {
-  background-color: gainsboro;
+  background-color: #dcdcdc;
 }
 
 .learning h2 {
@@ -329,7 +394,7 @@ p {
 .course {
   max-width: 33.25rem;
   margin: 1rem;
-  background-color: white;
+  background-color: #fff;
 }
 
 .learning-content {
@@ -344,6 +409,18 @@ p {
 .course h3 {
   font-size: 2.3rem;
   font-weight: bold;
+}
+
+@media only screen and (max-width: 768px) {
+  .courses {
+    Padding-left: .5rem;
+    padding-right: .5rem;
+  }
+
+  .learning-content {
+    padding-bottom: 1rem;
+  }
+
 }
 
 @media only screen and (max-width: 470px) {
@@ -361,19 +438,23 @@ p {
   .learning-content {
     height: auto;
     margin: 0;
+    padding-bottom: 0;
   }
 
   .course h3 {
     padding: 3rem 1rem;
-    background-color: darkgray;
+    background-color: #a9a9a9;
   }
 
 }
+
+
 /*  Thesis Exhibit Section  */
+
 
 .thesis {
   background-color: #F2F2F2;
-  border-bottom: solid 1px lightgray;
+  border-bottom: solid 1px #d3d3d3;
 }
 
 .thesis-info {
@@ -420,23 +501,17 @@ p {
 }
 
 .design {
-  background-color: lightgray;
+  background-color: #d3d3d3;
   margin-top: 1.5rem;
   line-height: 3rem;
 }
 
 .news {
   display: flex;
-  padding: 2rem 2rem;
+  padding: 2rem;
 }
 
-@media only screen and (max-width: 470px) {
-  .thesis {
-    border: none;
-  }
-
-  .thesis-info h3,
-  .thesis-info p,
+@media only screen and (max-width: 768px) {
   .study {
     display: none;
   }
@@ -448,7 +523,25 @@ p {
 
 }
 
-/* Footor  */
+@media only screen and (max-width: 470px) {
+  .thesis {
+    border: none;
+  }
+
+  .thesis-info h3,
+  .thesis-info p {
+    display: none;
+  }
+
+  .video {
+    width: 100%;
+  }
+
+}
+
+
+/*  Footor  */
+
 
 footer {
   display: flex;
@@ -467,13 +560,16 @@ footer a {
   padding: .5rem;
 }
 
+@media only screen and (max-width: 768px) {
+  footer p, a {
+    font-size: 1.2rem;
+  }
+
+}
+
 @media only screen and (max-width: 470px) {
   footer {
     padding-top: 0;
-  }
-
-  footer p {
-    font-size: 1.2rem;
   }
 
   footer a {
